# api-gateway

./: .gitignore
.github/: copilot-instructions.md
.github/agent-docs/: GETTING_STARTED.md  README.md  backend-agent.md  master-orchestration-agent.md
.github/agents/: README.md  architect.agent.md  backend.agent.md  devops.agent.md  master.agent.md  security.agent.md
.github/ai-agents/: architect-agent.md  devops-agent.md  security-agent.md
.github/profile/: README.md
api-gateway/: IMPLEMENTATION_COMPLETE.md  README.md  pom.xml
api-gateway/src/main/resources/: application.yml
docs/: AI Scientist Ecosystem.docx  Executive Summary.docx  Timeline & Task List.docx
frontend/: .env.local.example  FRONTEND_COMPLETE.md  README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/api/health-check/: route.ts
frontend/app/earthquakes/: page.tsx
frontend/app/space-weather/: page.tsx
frontend/app/water-levels/: page.tsx
frontend/components/: AlertCard.tsx  DataSourceBadge.tsx  RealTimeServiceStatus.tsx  ServiceStatus.tsx  StatsCard.tsx  TimestampBreakdown.tsx  WaterLevelMap.tsx
frontend/lib/: api.ts  types.ts
infra/: .env  PHASE1_DEPLOYMENT_COMPLETE.md  README.md  docker-compose.yml
infra/iac/: main.tf
infra/monitoring/: prometheus.yml
infra/sql/init/: 01_init_schema.sql
knowledge/: README.md  pyproject.toml
knowledge/src/knowledge/: retriever.py
knowledge/tests/: test_retriever.py
meta/infra/config-server/: pom.xml
meta/infra/eureka-server/: pom.xml
(+12 files in other folders)
