[tool.poetry]
name = "ai-scientist-knowledge"
version = "0.1.0"
description = "Knowledge ingestion & retrieval for AI Scientist Ecosystem"
authors = ["Contributors"]
readme = "README.md"
license = "MIT"
packages = [{include = "knowledge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
